--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     }
   },
   "dependencies": {
+    "@aap/flexed": "^0.9.9",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-import": "^12.0.0",
