HB-2889 Button with font

--- a/src/tokens/font.yml
+++ b/src/tokens/font.yml
@@ -4,6 +4,11 @@
 #
 
 props:
+  helvetica:
+    value: "'Helvetica Neue', Helvetica, Arial, Roboto, 'Lucida Grande', sans-serif"
+  font_museo:
+    value: "Museo, $helvetica"
+
   font_heading:
     value: "'Fira Sans', Helvetica, Arial, sans-serif"
   font_text:
