--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "styleguide:build": "vue-styleguidist build --config ./config/docs.config.js",
     "theo": "theo ./src/tokens/tokens.yml --transform web --format map.scss,scss,raw.json,json --dest ./src/assets/tokens",
     "theo:onchange": "onchange \"./src/tokens/*.yml\" -- npm run theo",
-    "test": "npm-run-all theo unit"
+    "test": "npm-run-all theo unit",
+    "hook:pre-commit": "pretty-quick --staged && npm run lint"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "npm run hook:pre-commit"
     }
   },
   "repository": {
