--- a/src/tokens/tokens.yml
+++ b/src/tokens/tokens.yml
@@ -16,6 +16,7 @@ imports:
   - ./border-radius.yml
   - ./spacing.yml
   - ./line-height.yml
+  - ./prefix.yml
 global:
   type: global
   category: all
