--- a/src/tokens/box-shadow.yml
+++ b/src/tokens/box-shadow.yml
@@ -7,9 +7,9 @@ props:
   shadow_s:
     value: "0 0 0 1px rgba(92,106,196,.1)"
 
-  $btn-shade-hover:
+  btn_shade_hover:
     value: "inset 0 -3px 0 0 rgba(0, 0, 0, 0.4)"
-  $btn-shade-active:
+  btn_shade_active:
     value: "inset 0 3px 4px 0 rgba(0, 0, 0, 0.4)"
 
 global:
