--- a/src/tokens/spacing.yml
+++ b/src/tokens/spacing.yml
@@ -4,20 +4,28 @@
 #
 
 props:
+  space_xxxxl:
+    value: "80px"
+  space_xxxl:
+    value: "60px"
   space_xxl:
-    value: "128px"
+    value: "50px"
   space_xl:
-    value: "64px"
+    value: "40px"
   space_l:
-    value: "48px"
+    value: "30px"
   space_m:
-    value: "24px"
+    value: "25px"
   space_s:
-    value: "16px"
+    value: "20px"
   space_xs:
-    value: "8px"
+    value: "15px"
   space_xxs:
-    value: "4px"
+    value: "10px"
+  space_xxxs:
+    value: "8px"
+  space_xxxxs:
+    value: "5px"
 global:
   type: number
   category: space
