--- a/src/tokens/font-size.yml
+++ b/src/tokens/font-size.yml
@@ -4,20 +4,18 @@
 #
 
 props:
-  size_xxxl:
-    value: "64px"
-  size_xxl:
-    value: "48px"
-  size_xl:
-    value: "36px"
-  size_l:
-    value: "24px"
-  size_m:
+  font_size_xxl:
+    value: "45px"
+  font_size_xl:
+    value: "32px"
+  font_size_l:
+    value: "26px"
+  font_size_m:
+    value: "20px"
+  font_size_s:
     value: "16px"
-  size_s:
-    value: "13px"
-  size_xs:
-    value: "11px"
+  font_size_xs:
+    value: "14px"
 global:
   type: number
   category: font-size
