--- a/src/tokens/line-height.yml
+++ b/src/tokens/line-height.yml
@@ -4,12 +4,20 @@
 #
 
 props:
+  line_height_xxl:
+    value: "62px"
+  line_height_xl:
+    value: "48px"
+  line_height_l:
+    value: "39px"
   line_height_m:
-    value: "1.6"
+    value: "32px"
   line_height_s:
-    value: "1.3"
+    value: "25px"
   line_height_xs:
-    value: "1"
+    value: "22px"
+  line_height_xxs:
+    value: "17px"
 global:
   type: number
   category: line-height
