--- a/src/tokens/size.yml
+++ b/src/tokens/size.yml
@@ -8,6 +8,8 @@ props:
     value: "64px"
   tappable_square:
     value: "44px"
+  height_input:
+    value: "58px"
 global:
   type: number
   category: size
