HB-2915 More docs

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm run hook:pre-commit"
+      "pre-push": "npm run hook:pre-commit"
     }
   },
   "repository": {
