--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
   "printWidth": 120,
-  "singleQuote": false,
+  "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "semi": false,
+  "semi": true,
   "requirePragma": false,
   "insertPragma": false,
   "useTabs": false,
