--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "eslint:recommended",
+      "plugin:adoptapet/base",
       "plugin:vue/essential"
     ],
     "env": {
@@ -81,25 +81,14 @@
       "node": true
     },
     "rules": {
-      "indent": [
-        "error",
-        2
-      ],
-      "vue/no-unused-vars": "error",
-      "quotes": [
-        "error",
-        "double"
-      ],
-      "no-extra-semi": "off",
-      "semi": [
-        "error",
-        "never"
-      ],
-      "semi-style": [
-        "error",
-        "last"
-      ],
-      "no-console": "off"
+      "import/no-extraneous-dependencies": "off"
+    },
+    "settings": {
+      "import/resolver": {
+        "webpack": {
+          "config": "build/webpack.base.conf.js"
+        }
+      }
     },
     "parserOptions": {
       "sourceType": "module",
@@ -149,6 +138,8 @@
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-adoptapet": "^0.2.0",
     "eslint-plugin-compat": "^2.6.2",
     "eslint-plugin-es5": "^1.3.1",
     "eslint-plugin-import": "^2.14.0",
