--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,vue}": ["eslint --fix", "git add"]
+    "**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -139,7 +142,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-adoptapet": "^0.3.0",
+    "eslint-plugin-adoptapet": "^0.3.1",
     "eslint-plugin-compat": "^2.6.2",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
