HB-3119 Add validation for Textarea

--- a/src/tokens/compatibility.yml
+++ b/src/tokens/compatibility.yml
@@ -8,7 +8,7 @@ props:
   prefix_vuex_module:
     value: "Periodic"
   periodic_component_class:
-    value: "periodic-base"
+    value: "base"
 global:
   type: global
   category: compatibility
