--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   },
   "dependencies": {
     "bem-cn": "^3.0.1",
+    "fuse.js": "^3.3.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-import": "^12.0.0",
