--- a/package.json
+++ b/package.json
@@ -170,12 +170,12 @@
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
-    "theo": "^8.0.0-beta.2",
+    "theo": "^8.0.1",
     "url-loader": "^1.1.1",
     "vue-jest": "^2.6.0",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-styleguidist": "^1.9.0",
+    "vue-styleguidist": "^2.1.1",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
     "webpack": "^4.20.2",
