--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .DS_Store
 .eslintcache
 node_modules/
-dist/assets/
-dist/app.css
-dist/system.css
-dist/index.html
-dist/docs/
+dist/
 /test/unit/coverage/
 npm-debug.log*
 yarn-debug.log*
