--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
   },
   "eslintConfig": {
     "rules": {
-      "implicit-arrow-linebreak": "off",
-      "function-paren-newline": "off"
+      "func-names": "off"
     },
     "extends": [
       "plugin:adoptapet/base",
@@ -99,7 +98,7 @@
     },
     "parserOptions": {
       "sourceType": "module",
-      "ecmaVersion": 8,
+      "ecmaVersion": 9,
       "ecmaFeatures": {
         "jsx": true
       }
@@ -145,7 +144,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-adoptapet": "^0.5.0",
+    "eslint-plugin-adoptapet": "^1.0.0",
     "eslint-plugin-compat": "^2.6.2",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
