--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
       "@babel/plugin-syntax-dynamic-import",
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-transform-react-jsx",
       "@babel/plugin-transform-runtime"
     ],
     "env": {
@@ -129,6 +130,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
@@ -163,6 +165,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.0.0",
     "portfinder": "^1.0.17",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
@@ -172,13 +176,14 @@
     "terser-webpack-plugin": "^1.1.0",
     "theo": "^8.0.1",
     "url-loader": "^1.1.1",
+    "vue-docgen-api": "3.12.0",
     "vue-jest": "^2.6.0",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-styleguidist": "^2.1.1",
+    "vue-styleguidist": "^2.1.2",
     "vue-template-compiler": "2.5.22",
     "vuex": "^3.0.1",
-    "webpack": "^4.20.2",
+    "webpack": "^4.31.0",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
