--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   },
   "dependencies": {
     "bem-cn": "^3.0.1",
-    "fuse.js": "^3.3.0",
+    "fuse.js": "^3.4.4",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-import": "^12.0.0",
@@ -167,6 +167,7 @@
     "portfinder": "^1.0.17",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "recast": "^0.17.6",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
@@ -178,7 +179,7 @@
     "url-loader": "^1.1.1",
     "vue-docgen-api": "3.12.0",
     "vue-jest": "^2.6.0",
-    "vue-loader": "^15.4.2",
+    "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-styleguidist": "^2.1.2",
     "vue-template-compiler": "2.5.22",
