--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
+    "doctrine": "^3.0.0",
     "eslint": "^5.6.1",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-adoptapet": "^1.0.0",
