HB-4260 Adding b.textInherit

--- a/src/tokens/compatibility.yml
+++ b/src/tokens/compatibility.yml
@@ -9,6 +9,8 @@ props:
     value: "Periodic"
   periodic_component_class:
     value: "base"
+  periodic_text_inherit_class:
+    value: "base-text-inherit"
 global:
   type: global
   category: compatibility
