--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bem-cn": "^3.0.1",
     "fuse.js": "^3.4.4",
     "lodash": "^4.17.11",
