--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aap/periodic",
-  "version": "0.57.1",
+  "version": "1.0.0-alpha-1",
   "description": "A design system for AAP's Vue components",
   "main": "dist/system/system.js",
   "files": [
