--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aap/periodic",
-  "version": "1.0.0-alpha-9",
+  "version": "1.0.0-alpha-10",
   "description": "A design system for AAP's Vue components",
   "main": "dist/system/system.js",
   "files": [
@@ -16,6 +16,7 @@
     "build:system": "npm-run-all theo node:build:system",
     "build:docs": "npm-run-all theo styleguide:build",
     "lint": "eslint '**/*.{js,vue}' --cache",
+    "lint-fix": "./node_modules/.bin/eslint --ext .js,.vue --fix .",
     "node:build": "node ./build/build.js",
     "node:build:system": "node ./build/build-system.js",
     "prepublishOnly": "npm run build:system && npm test",
