--- a/src/tokens/color.yml
+++ b/src/tokens/color.yml
@@ -20,7 +20,7 @@ aliases:
     value: "#001123"
   white:
     value: "#fff"
-    
+
 props:
   color_vermilion_darker:
     value: "hsla({!vermilion}, 33%, 1)"
@@ -86,6 +86,15 @@ props:
     value: "#E9F3FD"
     category: color_group_4
 
+  color-gray-lighter:
+    value: "#ECECEC"
+    category: color_group_5
+  color-gray-light:
+    value: "#dfdfdf"
+    category: color_group_5
+  color-gray:
+    value: "#b3b3b3"
+    category: color_group_5
   color_forty_per_lighter_grey:
     value: "rgba(223,223,223, .4)"
     category: color_group_5
