--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aap/periodic",
-  "version": "1.0.0-alpha-27",
+  "version": "1.0.0-alpha-28",
   "description": "A design system for AAP's Vue components",
   "main": "dist/system/system.js",
   "files": [
@@ -118,7 +118,7 @@
     "postcss-safe-parser": "^4.0.1",
     "postcss-url": "^8.0.0",
     "tinycolor2": "^1.4.1",
-    "vue": "2.5.22",
+    "vue": "^2.6.10",
     "vue-lodash": "^2.0.0",
     "vue-meta": "^1.5.5",
     "vue-router": "^3.1.3",
@@ -187,7 +187,7 @@
     "vue-loader": "^15.7.2",
     "vue-style-loader": "^4.1.2",
     "vue-styleguidist": "^2.1.2",
-    "vue-template-compiler": "2.5.22",
+    "vue-template-compiler": "2.6.10",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
