--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "vue-lodash": "^2.0.0",
     "vue-meta": "^1.5.5",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.17.1",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
     "webfontloader": "^1.6.28"
