--- a/src/tokens/border-radius.yml
+++ b/src/tokens/border-radius.yml
@@ -6,6 +6,12 @@
 props:
   radius_default:
     value: "3px"
+  radius-xxs:
+    value: "2px"
+  radius-xs:
+    value: "3px"
+  radius-s:
+    value: "4px"
   radius_m:
     value: "6px"
   radius_l:
