--- a/src/tokens/box-shadow.yml
+++ b/src/tokens/box-shadow.yml
@@ -10,9 +10,9 @@ props:
     value: "-1px 1px 2px 0 rgba(0, 0, 0, .19)"
 
   btn_shade_hover:
-    value: "inset 0 -3px 0 0 rgba(0, 0, 0, 0.4)"
+    value: "inset 0 -2px 0 rgba(0, 0, 0, 0.4)"
   btn_shade_active:
-    value: "inset 0 3px 4px 0 rgba(0, 0, 0, 0.4)"
+    value: "inset 0 2px 3px rgba(0, 0, 0, 0.4)"
 
 global:
   type: ...
