--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "@babel/register": "^7.4.4",
     "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^9.1.5",
+    "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
