--- a/src/tokens/letter-spacing.yml
+++ b/src/tokens/letter-spacing.yml
@@ -1,11 +1,11 @@
 #
 # LETTER SPACING TOKENS
-# Use these tokens to adjust letter_spacing.
+# Use these tokens to adjust letter-spacing.
 #
 
 props:
   letter_spacing_default:
-    value: "_0.15px"
+    value: "-0.15px"
 
 global:
   type: number
