--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bem-cn": "^3.0.1",
+    "brfs": "github:browserify/brfs",
     "fuse.js": "^3.4.4",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
