--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aap/periodic",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A design system for AAP's Vue components",
   "main": "dist/system/system.js",
   "files": [
@@ -113,6 +113,7 @@
     "fuse.js": "^3.4.4",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
+    "optimist": "^0.6.1",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-safe-parser": "^4.0.1",
